--- a/action.yml
+++ b/action.yml
@@ -14,8 +14,14 @@ inputs:
   job-path:
     description: 'job/folder_name/job/job_name'
     required: true
+  jenkins-port:
+    description: "Jenkins server port"
+    required: true
   job-params:
     description: "params to run the job. JSON string. i.e '{'param1': 'value1', 'param2': 'value2'}' "
+    required: false
+  is-secure:
+    description: "Is this server accessed on HTTPS?"
     required: false
 outputs:
   job_status:
@@ -24,11 +30,13 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.jenkins-url}}
-    - ${{ inputs.jenkins-token}}
-    - ${{ inputs.user}}
+    - ${{ inputs.jenkins-url }}
+    - ${{ inputs.jenkins-token }}
+    - ${{ inputs.user }}
     - ${{ inputs.job-path }}
-    - ${{ inputs.job-params}}
+    - ${{ inputs.jenkins-port }}
+    - ${{ inputs.job-params }}
+    - ${{ inputs.is-secure }}
 branding:
   icon: 'arrow-right-circle'
   color: 'blue'
